# CursesSharp

./: .gitignore  Curses Sharp.sln  CursesSharp.Native.Linux.sln  CursesSharp.Native.sln  CursesSharp.pc.in  CursesSharp.sln  CursesSharpNative.sln  Makefile.am  Makefile.unix  README.md  ReadMe.txt  WindowsSupport.md  configure.ac
AttributeGen/: AttributeGen.vcproj  Makefile.am  attrgen.c
CI/: build.linux.sh  build.osx.sh  libpath-source-me.sh  linux.native.compile.sh
CursesSharp/: Curses.cs  CursesMethods.cs  CursesSharp.csproj  CursesSharp.sln  CursesStdscr.cs  Defs.cs  DefsGen.cs  Errors.cs  IWindow.cs  Makefile.am  NativeMethods.cs  Pad.cs  Panel.cs  Screen.cs  SoftLabels.cs  StdWindow.cs  Stdscr.cs  Window.cs  WindowBase.cs
CursesSharp.Demo/Demo.CursesSharp.Firework/: Demo.Firework.csproj  FireworkDemo  Makefile.am
CursesSharp.Demo/Demo.CursesSharp.Gui.HelloWorld/: Demo.Gui.HelloWorld.csproj  Program.cs
CursesSharp.Demo/Demo.CursesSharp.Gui.HelloWorld/Properties/: AssemblyInfo.cs
CursesSharp.Demo/Demo.CursesSharp.HelloWorld/: Demo.HelloWorld.csproj  HelloWorldDemo  Makefile.am  Program.cs
CursesSharp.Demo/Demo.CursesSharp.Rain/: Demo.Rain.csproj  RainDemo  RainDemo.in
CursesSharp.Demo/Demo.CursesSharp.Rain/Properties/: AssemblyInfo.cs
CursesSharp.Demo/Demo.CursesSharp.Unicode/: Demo.Unicode.csproj  Makefile.am  Program.cs  UnicodeDemo
CursesSharp.Demo/Demo.CursesSharp.Unicode/Properties/: AssemblyInfo.cs
CursesSharp.Demo/Demo.Gui.MessageBox/: Demo.Gui.MessageBox.csproj  Program.cs
CursesSharp.Demo/Demo.Gui.MessageBox/Properties/: AssemblyInfo.cs
CursesSharp.Demo/Demo.Gui.MidnightCommander/: Demo.Gui.MidnightCommander.csproj  Demo.Gui.MouselessCommander.csproj  LICENSE  Program.cs  README  TODO
CursesSharp.Demo/Demo.Gui.MidnightCommander/Properties/: AssemblyInfo.cs
CursesSharp.Demo/Demo.Gui.MidnightCommander/src/: fileops.cs  mc.cs  panel.cs  util.cs  viewfile.cs
CursesSharp.Demo/Demo.Gui.Timeout/: Demo.Gui.Timeout.csproj  Program.cs
CursesSharp.Demo/Demo.Gui.Timeout/Properties/: AssemblyInfo.cs
CursesSharp.Demo/Demo.Native.ResizeTerm/: Demo.Native.ResizeTerm.csproj  Program.cs
CursesSharp.Demo/Demo.Native.ResizeTerm/Properties/: AssemblyInfo.cs
CursesSharp.Gui/: CursesSharp.Gui.csproj
CursesSharp.Gui/Properties/: AssemblyInfo.cs
CursesSharp.Gui/src/: ButtonBar.cs  ButtonBarWidget.cs  Debug.cs  ErrorDialog.cs  FileViewWidget.cs  Gui.cs  Handles.cs  Looper.cs  MessageBox.cs  Terminal.cs
CursesSharp.Native/: ASCIIControlCodes.MD  CursesSharp.Native.Linux.cproj  CursesSharp.Native.cproj  CursesSharp.Native.md.pc  CursesWrapper.md.pc  CursesWrapper.vcproj  addch.c  addchstr.c  addstr.c  attr.c  beep.c  bkgd.c  border.c  clear.c  color.c  config.h  config.h.in  debug.c  delch.c  deleteln.c  getyx.c  inch.c  inopts.c  insstr.c  kernel.c  libCursesWrapper.la  overlay.c  pad.c  panel.c  refresh.c  scr_dump.c  touch.c  unicode.c  util.c  window.c  wrapper.c  wrapper.h  xbuffer.c  xbuffer.h
CursesSharp.Native/win32/: config.h
CursesSharp/Internal/: CMsAddch.cs  CMsAddchstr.cs  CMsAddstr.cs  CMsAttr.cs  CMsBeep.cs  CMsBkgd.cs  CMsBorder.cs  CMsClear.cs  CMsColor.cs  CMsDebug.cs  CMsDelch.cs  CMsDeleteln.cs  CMsGetch.cs  CMsGetstr.cs  CMsGetyx.cs  CMsInch.cs  CMsInchstr.cs  CMsInitscr.cs  CMsInopts.cs  CMsInsch.cs  CMsInsstr.cs  CMsInstr.cs  CMsKernel.cs  CMsKeyname.cs  CMsMouse.cs  CMsMove.cs  CMsOutopts.cs  CMsOverlay.cs  CMsPad.cs  CMsPanel.cs  CMsRefresh.cs  CMsScrdump.cs  CMsScroll.cs  CMsSlk.cs  CMsTermattr.cs  CMsTouch.cs  CMsUtil.cs  CMsWindow.cs  CursesMethods.cs  InternalException.cs  (+1 more)
CursesSharp/Properties/: AssemblyInfo.cs
CursesSharp/src/: Curses.cs  CursesException.cs  DefsGen.cs  Pad.cs  Panel.cs  Stdscr.cs  Window.cs  WindowBase.cs
CursesWrapper/: CursesWrapper.cproj  CursesWrapper.vcproj  Makefile.am  addch.c  addchstr.c  addstr.c  attr.c  beep.c  bkgd.c  border.c  clear.c  color.c  debug.c  delch.c  deleteln.c  getch.c  getstr.c  getyx.c  inch.c  inchstr.c  initscr.c  inopts.c  insch.c  insstr.c  instr.c  kernel.c  keyname.c  mouse.c  move.c  outopts.c  overlay.c  pad.c  panel.c  refresh.c  scr_dump.c  scroll.c  slk.c  termattr.c  touch.c  unicode.c  (+8 more)
FireworkDemo/: FireworkDemo.csproj  FireworkDemo.in  Makefile.am  Program.cs
FireworkDemo/Properties/: AssemblyInfo.cs
HelloWorldDemo/: HelloWorldDemo.csproj  HelloWorldDemo.in
HelloWorldDemo/Properties/: AssemblyInfo.cs
RainDemo/: Makefile.am  Program.cs  RainDemo.csproj  RainDemo.in
RainDemo/Properties/: AssemblyInfo.cs
UnicodeDemo/: Makefile.am  Program.cs  UnicodeDemo.csproj  UnicodeDemo.in
UnicodeDemo/Properties/: AssemblyInfo.cs
m4/: ax_with_curses.m4  ax_with_curses_extra.m4  mylibs.m4
win32/: config.h
