lib_LTLIBRARIES = libCursesWrapper.la

EXTRA_DIST = CursesWrapper.vcproj

libCursesWrapper_la_SOURCES = \
	addch.c \
	addchstr.c \
	addstr.c \
	attr.c \
	beep.c \
	bkgd.c \
	border.c \
	clear.c \
	color.c \
	debug.c \
	delch.c \
	deleteln.c \
	getch.c \
	getstr.c \
	getyx.c \
	inch.c \
	inchstr.c \
	initscr.c \
	inopts.c \
	insch.c \
	insstr.c \
	instr.c \
	kernel.c \
	keyname.c \
	mouse.c \
	move.c \
	outopts.c \
	overlay.c \
	pad.c \
	panel.c \
	refresh.c \
	scr_dump.c \
	scroll.c \
	slk.c \
	termattr.c \
	touch.c \
	util.c \
	window.c \
	wrapper.c \
	wrapper.h
libCursesWrapper_la_LDFLAGS = -module -no-undefined -avoid-version
libCursesWrapper_la_LDFLAGS += $(CURSES_LDFLAGS)


